force-app/main/default/objects/System_Health_Log__c/fields/CPU_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Ms__c</fullName>
    <description>CPU time consumed by the batch job in milliseconds. Used for performance monitoring and alerting.</description>
    <label>CPU Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>