force-app/main/default/objects/System_Health_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <description>Detailed error messages from failed pattern rules or batch processing</description>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>