force-app/main/default/objects/System_Health_Log__c/fields/Rule_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Developer_Name__c</fullName>
    <description>The DeveloperName of the pattern rule associated with this health log entry. Enables per-rule health analysis.</description>
    <label>Rule Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>