force-app/main/default/objects/System_Health_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Rule_Developer_Name__c</columns>
    <columns>CPU_Time_Ms__c</columns>
    <columns>Error_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>